# striatica

./: .env.example  .gitignore  0404-0409-minor-work.txt  CLAUDE.md  Dockerfile  Dockerfile.gpu  ERRATA.md  LICENSE  README.md  cli-1.cast  pyproject.toml
dashboards/grafana/: cost-capacity.json  data-quality.json  pipeline-run-metrics.json  reproducibility-drift.json
frontend/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/public/xfr-DELETEME/: gemma-2-2b-12-gemmascope-res-16k-metadata.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Canvas3D.tsx  CircuitPanel.tsx  DebugConsole.tsx  DetailPanel.tsx  GrowthCurveChart.tsx  NavPanel.tsx  StatusBar.tsx  TopBar.tsx
frontend/src/config/: rendering.ts
frontend/src/shaders/: point.frag.glsl  point.vert.glsl
frontend/src/stores/: useAppStore.ts
frontend/src/three/: CameraTracker.tsx  CircuitBackground.tsx  CircuitEdges.tsx  CircuitLabels.tsx  CircuitNodes.tsx  FlyToCamera.tsx  Minimap.tsx  PointCloudInteraction.tsx  PointCloudMesh.tsx  SelectionRing.tsx
frontend/src/types/: circuit.ts  feature.ts
frontend/src/utils/: cameraSync.ts  colorScale.ts  dataLoader.ts
frontend/src/views/: CircuitGraphView.tsx  PointCloudView.tsx
frontend/tests/: app-loads.spec.ts  circuit-view.spec.ts  cluster-selection.spec.ts  color-mode.spec.ts  debug-console.spec.ts  view-switching.spec.ts
pipeline/: __init__.py  __main__.py  banner.py  circuits.py  cli.py  cluster.py  config.py  discovery.py  local_dim.py  metrics.py  prepare.py  reduce.py  validate.py  vectors.py
scripts/: azure_quickstart.sh  cloud_preprocess.sh  generate_circuits.py  hug_browser.py  lambda_launch.py  lambda_quickstart.sh  process_gpt2_small.py  test_byo_model.sh  update_model_table.py  vast_launch.py  vast_setup.sh  vast_setupv2.sh
scripts/providers/: hug_browser.py  lambda_quickstart.sh  vast_setupv2.sh
striatica/: pyproject.toml
striatica/pipeline/: banner.py  cli.py  cluster.py  config.py  download.py  reduce.py  test_byo_model.sh  vectors.py
striatica/tests/: test_circuits.py  test_prepare.py
tests/: test_causal_circuits.py  test_cli.py  test_data_integrity.py  test_download.py  test_local_dim.py  test_metrics.py  test_reduce.py  test_safety.py  test_transcoder_vectors.py  test_validate.py  test_vectors.py
